RESOLVED FIXED281395
Fix unexpected smart pointer warnings in WebCore and WebKt
https://bugs.webkit.org/show_bug.cgi?id=281395
Summary Fix unexpected smart pointer warnings in WebCore and WebKt
Ryosuke Niwa
Reported 2024-10-13 03:03:18 PDT
Fix static analyzer warnings.
Attachments
Ryosuke Niwa
Comment 1 2024-10-13 03:06:43 PDT
EWS
Comment 2 2024-10-13 21:45:41 PDT
Committed 285112@main (b09ed0efaa84): <https://commits.webkit.org/285112@main> Reviewed commits have been landed. Closing PR #35119 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-13 21:46:15 PDT
Note You need to log in before you can comment on or make changes to this bug.